5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1753_1521.log
== TEST (2019-05-16 19:12:42) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while(N>Q):
	cont=cont+1
print(semanas)
	
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:14:03) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while(N>Q):
	cont=cont+1
	semanas=semanas+1
print(semanas)
	
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:21:39) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while(N>Q):
	i=i+1
	cont=cont+1
	semanas=semanas+1
print(semanas)
	
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:24:01) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while():
	i=i+1
	cont=cont+1
	semanas=semanas+1
print(semanas)
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:25:20) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while():
	i=i+1
	cont=cont+1
	semanas=semanas+1
print(semanas)
	
-- EXECUTION TIME:
0.320207
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
5
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
5
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:23) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
i=1
cont=0
semanas=5
while():
	i=i+1
	cont=cont+1
	semanas=semanas+1
print(semanas)
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:43) 
-- CODE:
N=int(input("capacidade N:"))
estoque=int(input("estoque inicial:"))
Q=int(input("quantidade Q:"))
containers=0
cont=0
while(Q>estoque):
	cont=cont+1
print(semanas)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(semanas)
NameError: name 'semanas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
